# sospdemo

./: CMakeLists.txt  README.md
include/: categorizer_tier.hpp  function_tier.hpp  inference_engine.hpp  server_logic.hpp  utils.hpp
include/derecho-component/: blob.hpp  categorizer_tier.hpp  function_tier.hpp  server_logic.hpp
include/grpc-component/: client_logic.hpp  function_tier-grpc.hpp
include/mxnet-component/: inference_engine.hpp  utils.hpp
src/: CMakeLists.txt  categorizer_tier.cpp  client_logic.cpp  function_tier.cpp  inference_engine.cpp  main.cpp  server_logic.cpp  sospdemo-sample.cfg  utils.cpp
src/derecho-component/: blob.cpp  categorizer_tier.cpp  function_tier.cpp  server_logic.cpp
src/grpc-component/: client_logic.cpp  function_tier-grpc.cpp
src/mxnet-component/: inference_engine.cpp
src/protos/: function_tier.proto
test-2-nodes/n0/: derecho.cfg
test-2-nodes/n1/: derecho.cfg
test-4-nodes/: server-launch.sh
test-4-nodes/n0/: derecho.cfg
test-4-nodes/n1/: derecho.cfg
test-4-nodes/n2/: derecho.cfg  server
test-4-nodes/n3/: derecho.cfg
test-6-nodes/: server-launch.sh
test-6-nodes/n0/: derecho.cfg
test-6-nodes/n1/: derecho.cfg
test-6-nodes/n2/: derecho.cfg
test-6-nodes/n3/: derecho.cfg
test-6-nodes/n4/: derecho.cfg
test-6-nodes/n5/: derecho.cfg
test/client/: flower-model.tar.bz2  pet-model.tar.bz2  sospdemo
test/n0/: derecho.cfg  server
test/n1/: derecho.cfg  server
test/n2/: derecho.cfg
test/n3/: derecho.cfg
